# swagger.yaml
@@ -91,7 +91,7 @@ paths:
           description: Not found
         '405':
           description: Validation exception
-  /certificate/queryList:
+  /certificate/openList:
     post:
       tags:
         - certificate
@@ -113,29 +113,50 @@ paths:
           description: Invalid input
         '404':
           description: Not found
-  /certificate/queryListByPage:
-    get:
+  /certificate/deletedList:
+    post:
       tags:
         - certificate
       produces:
         - application/xml
         - application/json
       parameters:
-        - name: bookmark
-          in: query
-          type: string
+        - in: body
+          name: body
           required: true
+          schema:
+            $ref: '#/definitions/QueryConditions'
       responses:
         '200':
           description: successful operation
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/Certificate'
+            $ref: '#/definitions/MetaData'
         '400':
           description: Invalid input
         '404':
-          description: Certs not found
+          description: Not found
+  /certificate/draftList:
+    post:
+      tags:
+        - certificate
+      produces:
+        - application/xml
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/QueryConditions'
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/MetaData'
+        '400':
+          description: Invalid input
+        '404':
+          description: Not found
   /login:
     post:
       tags:
